# mini_services

./: .env.sample  Cargo.toml
migrations/: 20230401063602_records.up.sql  20230406162054_counters.down.sql  20230406162054_counters.up.sql
src/: api.rs  main.rs
src/api/: counters.rs  error.rs  minesweeper.rs
src/api/counters/: handlers.rs  scope.rs
src/api/counters/handlers/: minesweeper.rs  types.rs  utils.rs
src/api/minesweeper/: handlers.rs  mod.rs  scope.rs  types.rs  utils.rs
src/api/minesweeper/handlers/: save_record.rs  top_records.rs  types.rs  utils.rs
