[package]
name = "micro_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.9", features = ["derive"] }
uuid = { version = "1.3.0", features = ["v4"] }
serde_json = { version = "1.0.9" }
sqlx = { version = "0.6.3", features = ["runtime-actix-native-tls", "postgres", "uuid"] }
dotenvy = "0.15.7"
